--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
     <meta property="og:description" content="I am Senior UI Developer in a US based Company. Work as Web Designer and Graphic Designer." />
     <meta property="og:url" content="https://asifaleem-del.github.io/portfolio/" />
     <meta property="og:image" itemprop="image" content="https://asifaleem-del.github.io/portfolio/img/og-img.jpg" />
-
-    
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LRKN0NXR60"></script>
@@ -63,7 +60,7 @@
             <a href="#about" style="--i:2">About</a>
             <a href="#services" style="--i:3">Services</a>
             <a href="#skill" style="--i:3">Skills</a>
-            <a href="#portfolio" style="--i:4">Portfolio</a>
+            <a href="#portfolio" style="--i:4">Work for</a>
             <a href="#contact" style="--i:5">Contact</a>
         </nav>
         <button class="themeColorBtn" onclick="toggleThemeColor()">
@@ -79,12 +76,13 @@
             <h3>Hello, Myself</h3>
             <h1>Asif Aleem</h1>
             <h3><span id="text"></span></h3>
-            <p>I am a Senior UI Developer with extensive experience of 11 years 6 months</p>
+            <p>I am a Senior UI Developer (Frontent Developer) and Graphic Designer with extensive experience of 11 years 8 months</p>
             <div class="home-sci">
-                <a href="#contact" style="--i:7"><span class="material-symbols-outlined" title="Contact">phone_in_talk</span></a>
-                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=asifaleemkhan@gmail.com" target="_blank" style="--i:7" title="Email"><span class="material-symbols-outlined">attach_email</span></a>
-                <a href="https://linkedin.com/in/asif-aleem-99aa7516a" style="--i:7" target="_blank" title="linkedIn"><span class="material-symbols-outlined">connect_without_contact</span></a>
-                <a href="#contact" style="--i:7"><span class="material-symbols-outlined" title="Contact">location_on</span></a>
+                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=asifaleemkhan@gmail.com" target="_blank" style="--i:7" title="Email"><i class="fa-solid fa-envelope"></i></a>
+                <a href="https://linkedin.com/in/asif-aleem-99aa7516a" style="--i:7" target="_blank" title="linkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="#contact" style="--i:7"><i class="fa-solid fa-address-book"></i></a>
+                <a href="https://wa.me/917518969778" style="--i:7" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="tel:+9625068126" style="--i:7" target="_blank"><i class="fa-solid fa-phone"></i></a>
             </div>
             
             <a href="#about" class="btn-box">Who Am I</a>
@@ -98,7 +96,7 @@
         <div class="about-text">
             <h2>About <span>Me</span></h2>
             <h4>Senior UI Developer</h4>
-            <p>I am senior UI Developer currently working in US based company. It was my passion to be in IT field since childhood. After my 10+2 completion I decided to choose this field to become web designer and graphic designer. And then I complete my Professional Diploma in Computer Application from F-Tec Institute. I also make myself up to date from new software which come in market specially in my field. I also have done Certificate course in Angular CLI from Ducat. I complete my graduation(B.A Political Science) from VBS Purvanchal University in 2013</p>
+            <p>I am senior UI Developer (Frontent Developer) and Graphic Designer currently working in US based company. I choose to be Frontent Developer because it was my passion. After my +2(Intermediate) completion I decided to choose this field to become web designer and graphic designer and then I completed my Professional Diploma in Computer Application(PDCA) from F-Tec Institute. I have done Certificate course in Angular from Ducat. I have completed my Graduation(B.A Political Science) from VBS Purvanchal University in 2013. I am specialized in web designing and graphic designing. I have 11 years and 8 months experiance as UI Developer. I can change any template design in coding with help of HTML, CSS and Javascript. I have worked with many known companies.</p>
             <a href="#skill" class="btn-box">My Skills</a>
         </div>
     </div>
@@ -109,22 +107,22 @@
             <h1 class="sub-title">My <span>Services</span></h1>
             <div class="services-list">
                 <div>
-                    <span class="material-symbols-outlined">empty_dashboard</span>
+                    <span><i class="fa-regular fa-newspaper"></i></span>
                     <h2>Website Design</h2>
                     <p>I work on multiple website and design them by myself. Make CRM website design and maintain large backend website.Make E-Commerce website Khoobsurati.com. I also work on WordPrees. Cureently I am working on which company I make SaaS software for them and work on that website only by myself I am single UI developer there.  </p>
-                    <a href="#" class="read">Learn more</a>
+                    <!-- <a href="#" class="read">Learn more</a> -->
                 </div>
                 <div>
-                    <span class="material-symbols-outlined">mail</span>
+                    <span><i class="fa-solid fa-envelope"></i></span>
                     <h2>Email Design</h2>
                     <p>I have design too many emailer for multiple companies. I make them work UI and UX both for them. Make responsive and browser compatible. And make all the design user friendly and responsive. Also make emailer to keep in mind that it should be fit exact in gmail and outlook properly. </p>
-                    <a href="#" class="read">Learn more</a>
+                    <!-- <a href="#" class="read">Learn more</a> -->
                 </div>
                 <div>
-                    <span class="material-symbols-outlined">design_services</span>
+                    <span><i class="fa-solid fa-pen-ruler"></i></span>
                     <h2>Graphic Design</h2>
                     <p>I make to many template design in Photoshop. I also make some print able design in Corel Draw. I have worked on Figma, Invision, Zero Height, Adobe Illustrator Graphic design tools. I have work 1 year and 1 month as a Graphic designer and Web designer in my first company.</p>
-                    <a href="#" class="read">Learn more</a>
+                    <!-- <a href="#" class="read">Learn more</a> -->
                 </div>
             </div>
         </div>
@@ -140,7 +138,7 @@
                 <div class="bar">
                     <!-- <span class="material-symbols-outlined">html</span> -->
                     <div class="info">
-                        <span>HTML / HTML5</span>
+                        <span>HTML / HTML5 / XML / DHTML</span>
                     </div>
                     <div class="progress-line html">
                         <span></span>
@@ -149,7 +147,7 @@
                 <div class="bar">
                     <!-- <span class="material-symbols-outlined">css</span> -->
                     <div class="info">
-                        <span>CSS / CSS3</span>
+                        <span>CSS / CSS3 / Tailwind CSS</span>
                     </div>
                     <div class="progress-line css">
                         <span></span>
@@ -158,7 +156,7 @@
                 <div class="bar">
                     <!-- <span class="material-symbols-outlined">css</span> -->
                     <div class="info">
-                        <span>Bootstrap 5 / Tailwind CSS</span>
+                        <span>Bootstrap 3,4,5</span>
                     </div>
                     <div class="progress-line css">
                         <span></span>
@@ -188,6 +186,15 @@
                         <span>React / Angular CLI</span>
                     </div>
                     <div class="progress-line react">
+                        <span></span>
+                    </div>
+                </div>
+                <div class="bar">
+                    <!-- <span class="material-symbols-outlined">html</span> -->
+                    <div class="info">
+                        <span>SEO / Google Analytics</span>
+                    </div>
+                    <div class="progress-line seo">
                         <span></span>
                     </div>
                 </div>
@@ -236,7 +243,7 @@
         </div>
     </div>
     </section>
-    <section class="portfolio" id="portfolio">
+    <!-- <section class="portfolio" id="portfolio">
         <div class="reveal">
         <div class="main-text">
             <h2>Latest <span>Project</span></h2>
@@ -276,13 +283,48 @@
             </div>
         </div>
     </div>
+    </section> -->
+    <section class="company-logo" id="portfolio">
+        <div class="reveal">
+        <div class="main-text">
+            <h2>I <span>Work For</span></h2>
+            <div class="companies-logo">
+                <span>
+                    <img src="img/company-logo/avv.webp" height="100">
+                </span>
+                <span>
+                    <img src="img/company-logo/khoobsurati.jpg" height="80">
+                </span>
+                <span>
+                    <img src="img/company-logo/jetways.jpg" height="50">
+                </span>
+                <span>
+                    <img src="img/company-logo/kestone.png" height="35">
+                </span>
+                <span>
+                    <img src="img/company-logo/dz-vacation.jpg" height="100">
+                </span>
+                <span>
+                    <img src="img/company-logo/ostendio.webp" height="30">
+                </span>
+            </div>
+        </div>
+    </div>
     </section>
     <section class="" id="contact">
         <div class="reveal contact">
         <div class="contact-text">
             <h2>Contact <span>Me</span></h2>
-            <h4>Let's work together</h4>
-            <p>You can contact me through my linkedIn ID given above. I am open to work with company. I have 11 years and 6 month work experience in my field. I can convert any template design in code with help of HTML,CSS and Javascript and It's plugins.</p>
+            <div style="text-align: center;">
+                <h5>You can contact me to fill the form and also you can connect me<br> through social media as social link given below.</h5>
+                <div class="home-sci">
+                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=asifaleemkhan@gmail.com" target="_blank" style="--i:7" title="Email"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="https://linkedin.com/in/asif-aleem-99aa7516a" style="--i:7" target="_blank" title="linkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="#contact" style="--i:7"><i class="fa-solid fa-address-book"></i></a>
+                    <a href="https://wa.me/917518969778" style="--i:7" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="tel:+9625068126" style="--i:7" target="_blank"><i class="fa-solid fa-phone"></i></a>
+                </div>
+            </div>
         </div>
         <div class="contact-form">
             <form id="loginForm" method="POST" action="sendmail.php">
