Fix some  responsive ui issue

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="about-text">
             <h2>About <span>Me</span></h2>
             <h4>Senior UI Developer</h4>
-            <p>I am senior UI Developer (Frontent Developer) and Graphic Designer currently working in US based company. I choose to be Frontent Developer because it was my passion. After my +2(Intermediate) completion I decided to choose this field to become web designer and graphic designer and then I completed my Professional Diploma in Computer Application(PDCA) from F-Tec Institute. I have done Certificate course in Angular from Ducat. I have completed my Graduation(B.A Political Science) from VBS Purvanchal University in 2013. I am specialized in web designing and graphic designing. I have 11 years and 8 months experiance as UI Developer. I can change any template design in coding with help of HTML, CSS and Javascript. I have worked with many known companies.</p>
+            <p>I am senior UI Developer (Frontent Developer) and Graphic Designer currently working in US based company. I choose to be Frontent Developer because it was my passion. After my 10+2 (Intermediate) completion I decided to choose this field to become web designer and graphic designer and then I completed my Professional Diploma in Computer Application(PDCA) from F-Tec Institute. I have done Certificate course in Angular from Ducat. I have completed my Graduation(B.A Political Science) from VBS Purvanchal University in 2013. I am specialized in web designing and graphic designing. I have 11 years and 8 months experiance as UI Developer. I can change any template design in coding with help of HTML, CSS and Javascript. I have worked with many known companies.</p>
             <a href="#skill" class="btn-box">My Skills</a>
         </div>
     </div>
