Implemented some animation

--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
         </button>
     </header>
     <section class="home" id="home">
+        <div class="animatedBox">
+            <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+        </div>
         <div class="profile-pic">
             <img src="img/asif-circle-img.png" alt="Asif Aleem" />
         </div>
@@ -88,7 +91,10 @@
             <a href="#about" class="btn-box">Who Am I</a>
         </div>
     </section>
-    <section id="about">
+    <section id="about" class="p-relative">
+        <div class="animatedBox">
+            <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+        </div>
         <div class="reveal about">
         <div class="about-img">
             <img src="img/CircledAsifdp.png" alt="Asif Aleem" />
@@ -130,6 +136,9 @@
     </section>
     <section class="skill" id="skill">
         <div class="reveal">
+            <div class="animatedBox">
+                <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+            </div>
         <h1 class="sub-title">My <span>Skills</span></h1>
         <div class="skillContainer">
         <div class="container">
