Do some changes.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       }  
     }
     </script>
-<body id="themeColorMode">
+<body id="themeColorMode" class="active">
     <header class="header">
         <a href="#home" class="logo">Asif Aleem</a>
         <span class="iconToggle" id="iconToggle" onclick="toggleNav(this)">
