Fix some chnages.

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
         <div class="contact-text">
             <h2>Contact <span>Me</span></h2>
             <div style="text-align: center;">
-                <h5>You can contact me to fill the form and also you can connect me<br> through social media as social link given below.</h5>
+                <h5>You can contact me to fill the form and also you can connect me through social media as social link given below.</h5>
                 <div class="home-sci">
                     <a href="https://mail.google.com/mail/?view=cm&fs=1&to=asifaleemkhan@gmail.com" target="_blank" style="--i:7" title="Email"><i class="fa-solid fa-envelope"></i></a>
                     <a href="https://linkedin.com/in/asif-aleem-99aa7516a" style="--i:7" target="_blank" title="linkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
