add google form

--- a/index.html
+++ b/index.html
@@ -336,13 +336,14 @@
             </div>
         </div>
         <div class="contact-form">
-            <form id="loginForm" method="POST" action="sendmail.php">
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdsQ1VBQGEvfG3clblIhnPoIfyPoRDusWPPGhEPTuvN9tIqzw/viewform?embedded=true" width="640" height="1100" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            <!-- <form id="loginForm" method="POST" action="sendmail.php">
                 <input type="text" placeholder="Enter you name" id="userName" name="userName" />
                 <input type="email" placeholder="Enter you email" id="email" name="email" />
                 <input type="text" placeholder="Enter your subject" id="subject" name="subject" />
                 <textarea id="name" cols="40" rows="10" placeholder="Enter you details" name="name"></textarea>
                 <button type="submit" value="submit" class="send">Submit</button>
-            </form> 
+            </form>  -->
         </div>
     </div>
     </section>
