--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </header>
     <section class="home" id="home">
         <div class="animatedBox">
-            <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+            <div>HTML</div><div>CSS</div><div>Java Script</div><div>React Js</div><div>Bootstrap</div><div>Angular</div><div>SEO</div><div>Digital Marketing</div><div>Responsive</div><div>Tailwind CSS</div><div>Photoshop</div><div>PHP</div><div>Frontend Developer</div>
         </div>
         <div class="profile-pic">
             <img src="img/asif-circle-img.png" alt="Asif Aleem" />
@@ -79,7 +79,7 @@
             <h3>Hello, Myself</h3>
             <h1>Asif Aleem</h1>
             <h3><span id="text"></span></h3>
-            <p>I am a Senior UI Developer (Frontent Developer) and Graphic Designer with extensive experience of 11 years 8 months</p>
+            <p>I am a Senior UI Developer (Frontend Developer) and Graphic Designer with extensive experience of 11 years 8 months</p>
             <div class="home-sci">
                 <a href="https://mail.google.com/mail/?view=cm&fs=1&to=asifaleemkhan@gmail.com" target="_blank" style="--i:7" title="Email"><i class="fa-solid fa-envelope"></i></a>
                 <a href="https://linkedin.com/in/asif-aleem-99aa7516a" style="--i:7" target="_blank" title="linkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
@@ -93,7 +93,7 @@
     </section>
     <section id="about" class="p-relative">
         <div class="animatedBox">
-            <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+            <div>HTML</div><div>CSS</div><div>Java Script</div><div>React Js</div><div>Bootstrap</div><div>Angular</div><div>SEO</div><div>Digital Marketing</div><div>Responsive</div><div>Tailwind CSS</div><div>Photoshop</div><div>PHP</div><div>Frontend Developer</div>
         </div>
         <div class="reveal about">
         <div class="about-img">
@@ -102,7 +102,7 @@
         <div class="about-text">
             <h2>About <span>Me</span></h2>
             <h4>Senior UI Developer</h4>
-            <p>I am senior UI Developer (Frontent Developer) and Graphic Designer currently working in US based company. I choose to be Frontent Developer because it was my passion. After my 10+2 (Intermediate) completion I decided to choose this field to become web designer and graphic designer and then I completed my Professional Diploma in Computer Application(PDCA) from F-Tec Institute. I have done Certificate course in Angular from Ducat. I have completed my Graduation(B.A Political Science) from VBS Purvanchal University in 2013. I am specialized in web designing and graphic designing. I have 11 years and 8 months experiance as UI Developer. I can change any template design in coding with help of HTML, CSS and Javascript. I have worked with many known companies.</p>
+            <p>I am senior UI Developer (Frontend Developer) and Graphic Designer currently working in US based company. I choose to be Frontend Developer because it was my passion. After my 10+2 (Intermediate) completion I decided to choose this field to become web designer and graphic designer and then I completed my Professional Diploma in Computer Application(PDCA) from F-Tec Institute. I have done Certificate course in Angular from Ducat. I have completed my Graduation(B.A Political Science) from VBS Purvanchal University in 2013. I am specialized in web designing and graphic designing. I have 11 years and 8 months experiance as UI Developer. I can change any template design in coding with help of HTML, CSS and Javascript. I have worked with many known companies.</p>
             <a href="#skill" class="btn-box">My Skills</a>
         </div>
     </div>
@@ -137,7 +137,7 @@
     <section class="skill" id="skill">
         <div class="reveal">
             <div class="animatedBox">
-                <div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+                <div>HTML</div><div>CSS</div><div>Java Script</div><div>React Js</div><div>Bootstrap</div><div>Angular</div><div>SEO</div><div>Digital Marketing</div><div>Responsive</div><div>Tailwind CSS</div><div>Photoshop</div><div>PHP</div><div>Frontend Developer</div>
             </div>
         <h1 class="sub-title">My <span>Skills</span></h1>
         <div class="skillContainer">
@@ -336,14 +336,13 @@
             </div>
         </div>
         <div class="contact-form">
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdsQ1VBQGEvfG3clblIhnPoIfyPoRDusWPPGhEPTuvN9tIqzw/viewform?embedded=true" width="640" height="1100" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-            <!-- <form id="loginForm" method="POST" action="sendmail.php">
+            <form id="loginForm" method="POST" action="sendmail.php">
                 <input type="text" placeholder="Enter you name" id="userName" name="userName" />
                 <input type="email" placeholder="Enter you email" id="email" name="email" />
                 <input type="text" placeholder="Enter your subject" id="subject" name="subject" />
                 <textarea id="name" cols="40" rows="10" placeholder="Enter you details" name="name"></textarea>
                 <button type="submit" value="submit" class="send">Submit</button>
-            </form>  -->
+            </form>
         </div>
     </div>
     </section>
