Do some changes

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
         <div class="reveal about">
         <div class="about-img">
-            <img src="img/CircledAsifdp.png" alt="Asif Aleem" />
+            <img src="img/about.svg" alt="Asif Aleem" />
         </div>
         <div class="about-text">
             <h2>About <span>Me</span></h2>
