Fix some issues

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <a href="#portfolio" style="--i:4">Work for</a>
             <a href="#contact" style="--i:5">Contact</a>
         </nav>
-        <button class="themeColorBtn" onclick="toggleThemeColor()">
+        <button class="themeColorBtn" area-label="Toggle Swtich" onclick="toggleThemeColor()">
             <span class="dark"><i class="fa-solid fa-lightbulb"></i></span>
             <span class="light"><i class="fa-regular fa-lightbulb"></i></span>
         </button>
@@ -73,12 +73,12 @@
             <div>HTML</div><div>CSS</div><div>Java Script</div><div>React Js</div><div>Bootstrap</div><div>Angular</div><div>SEO</div><div>Digital Marketing</div><div>Responsive</div><div>Tailwind CSS</div><div>Photoshop</div><div>PHP</div><div>Frontend Developer</div>
         </div>
         <div class="profile-pic">
-            <img src="img/asif-circle-img.png" alt="Asif Aleem" />
+            <img src="img/asif-circle-img.png" alt="Asif Aleem Senior UI Developer" />
         </div>
         <div class="home-content">
-            <h3>Hello, Myself</h3>
+            <span class="hText">Hello, Myself</span>
             <h1>Asif Aleem</h1>
-            <h3><span id="text"></span></h3>
+            <span class="hText"><span id="text"></span></span>
             <p>I am a Senior UI Developer (Frontend Developer) and Graphic Designer with extensive experience of 11 years 8 months</p>
             <div class="home-sci">
                 <a href="https://mail.google.com/mail/?view=cm&fs=1&to=asifaleemkhan@gmail.com" target="_blank" style="--i:7" title="Email"><i class="fa-solid fa-envelope"></i></a>
@@ -97,7 +97,7 @@
         </div>
         <div class="reveal about">
         <div class="about-img">
-            <img src="img/about.svg" alt="Asif Aleem" />
+            <img src="img/about.svg" alt="Asif Aleem Senior UI Developer" />
         </div>
         <div class="about-text">
             <h2>About <span>Me</span></h2>
@@ -252,69 +252,28 @@
         </div>
     </div>
     </section>
-    <!-- <section class="portfolio" id="portfolio">
-        <div class="reveal">
-        <div class="main-text">
-            <h2>Latest <span>Project</span></h2>
-            <div class="portfolio-content">
-                <div class="row">
-                    <img src="img/work-1.png" alt="Asif Aleem Emailer" />
-                    <div class="layer">
-                        <h5>Emailer</h5>
-                        <p>Make personal Emailer for my personal use.</p>
-                        <a href="https://asifaleem-del.github.io/Asif-Emailer/" class="bx bx-link-external" target="_blank">View</a>
-                    </div>
-                </div>
-                <div class="row">
-                    <img src="img/work-2.png" alt="Asif Aleem Portfolio Website" />
-                    <div class="layer">
-                        <h5>Portfolio</h5>
-                        <p>Make personal Portfolio.</p>
-                        <a href="https://asifaleem-del.github.io/portfolio/" class="bx bx-link-external" target="_blank">View</a>
-                    </div>
-                </div>
-                <div class="row">
-                    <img src="img/work-3.png" alt="Asif Aleem Travel template Design" />
-                    <div class="layer">
-                        <h5>Travel Website</h5>
-                        <p>Make personal Emailer for my personal use.</p>
-                        <a href="https://asifaleem-del.github.io/travel/" class="bx bx-link-external" target="_blank">View</a>
-                    </div>
-                </div>
-                <div class="row">
-                    <img src="img/work-4.png" alt="animated cup design" />
-                    <div class="layer">
-                        <h5>Animated Cup</h5>
-                        <p>Make personal Emailer for my personal use.</p>
-                        <a href="https://asifaleem-del.github.io/animated-teacup/" class="bx bx-link-external" target="_blank">View</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    </section> -->
     <section class="company-logo" id="portfolio">
         <div class="reveal">
         <div class="main-text">
             <h2>I <span>Work For</span></h2>
             <div class="companies-logo">
                 <span>
-                    <img src="img/company-logo/avv.webp" height="100">
+                    <img src="img/company-logo/avv.webp" alt="avv logo" height="100">
                 </span>
                 <span>
-                    <img src="img/company-logo/khoobsurati.jpg" height="80">
+                    <img src="img/company-logo/khoobsurati.jpg" alt="khoobsurati logo" height="80">
                 </span>
                 <span>
-                    <img src="img/company-logo/jetways.jpg" height="50">
+                    <img src="img/company-logo/jetways.jpg" alt="jetways logo" height="50">
                 </span>
                 <span>
-                    <img src="img/company-logo/kestone.png" height="35">
+                    <img src="img/company-logo/kestone.png" alt="kestone logo" height="35">
                 </span>
                 <span>
-                    <img src="img/company-logo/dz-vacation.jpg" height="100">
+                    <img src="img/company-logo/dz-vacation.jpg" alt="dz vacation logo" height="100">
                 </span>
                 <span>
-                    <img src="img/company-logo/ostendio.webp" height="30">
+                    <img src="img/company-logo/ostendio.webp" alt="ostendio logo" height="30">
                 </span>
             </div>
         </div>
@@ -327,11 +286,11 @@
             <div style="text-align: center;">
                 <h5>You can contact me to fill the form and also you can connect me through social media as social link given below.</h5>
                 <div class="home-sci">
-                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=asifaleemkhan@gmail.com" target="_blank" style="--i:7" title="Email"><i class="fa-solid fa-envelope"></i></a>
-                    <a href="https://linkedin.com/in/asif-aleem-99aa7516a" style="--i:7" target="_blank" title="linkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
-                    <a href="#contact" style="--i:7"><i class="fa-solid fa-address-book"></i></a>
-                    <a href="https://wa.me/917518969778" style="--i:7" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-                    <a href="tel:+919625068126" style="--i:7" target="_blank"><i class="fa-solid fa-phone"></i></a>
+                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=asifaleemkhan@gmail.com" linkedIn="Email Contact" target="_blank" style="--i:7" title="Email"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="https://linkedin.com/in/asif-aleem-99aa7516a" area-label="LinkedIn" style="--i:7" target="_blank" title="linkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="#contact" style="--i:7" area-label="Contact form"><i class="fa-solid fa-address-book"></i></a>
+                    <a href="https://wa.me/917518969778" style="--i:7" target="_blank" area-label="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="tel:+919625068126" style="--i:7" target="_blank" area-label="Contact number"><i class="fa-solid fa-phone"></i></a>
                 </div>
             </div>
         </div>
@@ -350,7 +309,7 @@
         <p>Developed by Asif Aleem @2024</p>
     </div>
     <div class="whatsAppChat">
-        <a href="https://wa.me/917518969778" target="_blank"><i class="fa-brands fa-square-whatsapp"></i></a>
+        <a href="https://wa.me/917518969778" target="_blank" area-label="WhatsApp Contact"><i class="fa-brands fa-square-whatsapp"></i></a>
     </div>
     <button onclick="topFunction()" id="myBtn" title="Go to top">
         <i class="fa-solid fa-arrow-up"></i>
