--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <span class="hText"><span id="text"></span></span>
             <p>I am a Senior UI Developer (Frontend Developer) and Graphic Designer with extensive experience of 11 years 8 months</p>
             <div class="home-sci">
-                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=asifaleemkhan@gmail.com" target="_blank" style="--i:7" title="Email"><i class="fa-solid fa-envelope"></i></a>
+                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=asifaleemkhan@gmail.com" area-label="" target="_blank" style="--i:7" title="Email"><i class="fa-solid fa-envelope"></i></a>
                 <a href="https://linkedin.com/in/asif-aleem-99aa7516a" style="--i:7" target="_blank" title="linkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
                 <a href="#contact" style="--i:7"><i class="fa-solid fa-address-book"></i></a>
                 <a href="https://wa.me/917518969778" style="--i:7" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
@@ -286,7 +286,7 @@
             <div style="text-align: center;">
                 <h5>You can contact me to fill the form and also you can connect me through social media as social link given below.</h5>
                 <div class="home-sci">
-                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=asifaleemkhan@gmail.com" linkedIn="Email Contact" target="_blank" style="--i:7" title="Email"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=asifaleemkhan@gmail.com" area-label="Email Contact" target="_blank" style="--i:7" title="Email"><i class="fa-solid fa-envelope"></i></a>
                     <a href="https://linkedin.com/in/asif-aleem-99aa7516a" area-label="LinkedIn" style="--i:7" target="_blank" title="linkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
                     <a href="#contact" style="--i:7" area-label="Contact form"><i class="fa-solid fa-address-book"></i></a>
                     <a href="https://wa.me/917518969778" style="--i:7" target="_blank" area-label="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
