Fix some issues

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
             <p>I am a Senior UI Developer (Frontend Developer) and Graphic Designer with extensive experience of 11 years 8 months</p>
             <div class="home-sci">
                 <a href="https://mail.google.com/mail/?view=cm&fs=1&to=asifaleemkhan@gmail.com" area-label="Email Contact" target="_blank" style="--i:7" title="Email"><i class="fa-solid fa-envelope"></i></a>
-                <a href="https://linkedin.com/in/asif-aleem-99aa7516a" style="--i:7" target="_blank" title="linkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="#contact" style="--i:7"><i class="fa-solid fa-address-book"></i></a>
-                <a href="https://wa.me/917518969778" style="--i:7" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-                <a href="tel:+919625068126" style="--i:7" target="_blank"><i class="fa-solid fa-phone"></i></a>
+                <a href="https://linkedin.com/in/asif-aleem-99aa7516a" area-label="LinkedIn" style="--i:7" target="_blank" title="linkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="#contact" style="--i:7" area-label="Contact form"><i class="fa-solid fa-address-book"></i></a>
+                <a href="https://wa.me/917518969778" style="--i:7" target="_blank" area-label="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="tel:+919625068126" style="--i:7" target="_blank" area-label="Contact number"><i class="fa-solid fa-phone"></i></a>
             </div>
             
             <a href="#about" class="btn-box">Who Am I</a>
@@ -311,7 +311,7 @@
     <div class="whatsAppChat">
         <a href="https://wa.me/917518969778" target="_blank" area-label="WhatsApp Contact"><i class="fa-brands fa-square-whatsapp"></i></a>
     </div>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">
+    <button onclick="topFunction()" id="myBtn" title="Go to top" area-label="Go to top">
         <i class="fa-solid fa-arrow-up"></i>
     </button>
     <!-- <div class="blinking active" id="blinkColorMode"></div> -->
